# codeforces-cli

./: .gitignore  README.md  pyproject.toml
cfcli/: api.py
cfcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cfcli/commands/: rating.py  user.py
src/: api.py  cf_cli.py  functions.py  imports.py  main.py
src/cfcli/: functions.py  main.py
src/cfcli/commands/: submissions.py
src/commands/: rating.py  submissions.py  user.py
