[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cfcli"
version = "0.1.0"
description = "Codeforces personal analytics CLI"
requires-python = ">=3.8"
dependencies = [
    "click",
    "requests",
]

[project.scripts]
cfcli = "cfcli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]